Added &wdi= to aggregate data feed and updated README

--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -28,7 +28,7 @@
     <li><b>Codes:</b></li>
     <li><%= link_to "Statuses", statuses_path %></li>
     <li><%= link_to "Sectors", sectors_path %></li>
-    <li><%= link_to "ODA-Likes", oda_likes_path %></li>
+    <li><%= link_to "Flow Classes", oda_likes_path %></li>
     <!-- li>
     <%= # link_to "Tieds", tieds_path 
     %></li !-->
