--- a/app/views/projects/_facet_list.html.erb
+++ b/app/views/projects/_facet_list.html.erb
@@ -8,9 +8,9 @@
 				
 					<li class='facet-list-item'>
 						<% if params[f[:sym]].blank? %>
-							<%= link_to row.value, "#{current_url}#{joiner}#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}" %> (<%= row.count %>)
+							<%= link_to row.value, "#{ @current_url}#{ @joiner}#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}" %> (<%= row.count %>)
 						<% else %>
-							<b><%= row.value %></b> (<%= link_to "remove", "#{current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
+							<b><%= row.value %></b> (<%= link_to "remove", "#{ @current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
 						<% end %>
 					</li>
 
@@ -18,7 +18,7 @@
 		</ul>
 	<% else %>
 		<li class='facet-header'> 
-			<b><%= f[:name] %>:</b> <%= @search.facet(f[:sym]).rows[0].value %> (<%= link_to "remove", "#{current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
+			<b><%= f[:name] %>:</b> <%= @search.facet(f[:sym]).rows[0].value %> (<%= link_to "remove", "#{ @current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
 		</li>
 	<% end %> 
 <% end %>
