--- a/app/views/projects/_project_search.html.erb
+++ b/app/views/projects/_project_search.html.erb
@@ -1,36 +1,42 @@
-<% current_url = "#{request.protocol}#{request.host_with_port}/projects#{request.fullpath.gsub(/\/projects/, '')}".gsub(/\??page=\d+&*/, '') %>
-<% joiner = current_url.index("?") ? "&" : "?" %>
+<% @current_url = "#{request.protocol}#{request.host_with_port}/projects#{request.fullpath.gsub(/\/projects/, '')}".gsub(/&?\??page=\d+/, '') %>
+<% @joiner = @current_url.index("?") ? "&" : "?" %>
+<% @current_url_without_scope = @current_url.gsub(/&?scope=[a-z_]+/, '') %>
 <div class="row" id='project-facets'>	
 	<div class="span10">
-		<%= form_tag projects_path, method: :get do %>
+		<%= form_tag "/projects", method: :get do %>
 
 			<p> <b>Search: </b> 
-				<% @facets.each do |f| %>
+				<% FACETS.each do |f| %>
 					<% if params[f[:sym]] %>
 						<%= hidden_field_tag f[:sym], params[f[:sym]] %>
 					<% end %>
 				<% end %>
+				
+				<%= if params[:scope] then hidden_field_tag :scope, params[:scope] end %>
 				
 				<%= text_field_tag :search, params[:search], class: "span7" %>
 				<%= submit_tag "Submit", name: nil, class: "btn" %>
 			</p>
 		<% end %>
 	</div>
+	<div class='span12'>
+		<%= render 'projects/project_search_scope' %>
+	</div>
 	<div class='span10'>
 		<p><b>Filters:</b></p>
 	</div>
-	<% first_half = (@facets.count/2).round %>
+	<% first_half = (FACETS.count/2).round %>
 	<div class='span5'>
 		<ol>
-		<% @facets[0..first_half].each do |f| %>
-			<%= render partial: 'projects/facet_list', locals: {f: f, current_url: current_url, joiner: joiner} %>
+		<% FACETS[0..first_half].each do |f| %>
+			<%= render partial: 'projects/facet_list', locals: {f: f} %>
 		<% end %>
 		</ol>
 	</div>
 	<div class='span5'>
 		<ol>
-		<% @facets[first_half+1..-1].each do |f| %>
-			<%= render partial: 'projects/facet_list', locals: {f: f, current_url: current_url, joiner: joiner} %>
+		<% FACETS[first_half+1..-1].each do |f| %>
+			<%= render partial: 'projects/facet_list', locals: {f: f} %>
 		<% end %>
 		</ol>
 	</div>
