Corrects per MJT email

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -63,7 +63,7 @@
 	</div>
 	
 	<div class="project-geopoliticals project-box span5">
-		<h3>Geopolitical data:</h3>
+		<h3>Recipient Countries:</h3>
 		<%= render 'project_geopoliticals' %>
 	</div>
 </div>
