--- a/app/views/projects/_project_participating_organizations.html.erb
+++ b/app/views/projects/_project_participating_organizations.html.erb
@@ -2,7 +2,9 @@
 	<% @project.participating_organizations.each do |p| %>
 		<li class="project-organization project-li flaggable" flaggable_type='ParticipatingOrganization' flaggable_id=<%= p.id %>>
 			<% if !p.organization.nil? %>
-					<b><%= link_to p.organization.name, p.organization %></b>, Role: <i><%= p.role.nil? ? @unset_data : link_to(p.role.name, p.role) %></i> 
+					<b><%= link_to p.organization.name, p.organization %></b><br> 
+					Role: <%= p.role.nil? ? @unset_data : link_to(p.role.name, p.role) %><br>
+					Origin: <%= p.origin ? (link_to p.origin.name, p.origin) : @unset_data %> 
 			<% end %>
 			<% p.flags.each do |flag| %>
 					<%= render partial: 'flag_superscript', locals: { flag: flag} %>
