--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="tab-pane" id="chart">
   	<h2>Analyze</h2>
-  	<p>Forthcoming</p>
+  	<%= render partial: 'static_pages/analyze_js' %>
   </div>
   <div class="tab-pane" id="projects">
   	<h2> Search Projects </h2>
